using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MonsterMine : DungeonMonster
{
    public Animator mAnimator;

    public override void Update()
    {
        base.Update();

        // 대기 상태
        if (mCurrState == State.Idle)
        {
            // 추적 가능한지 체크하고 추적가능하면 공격 상태로 바꾼다.
            if (IsInTraceScope())
            {
                mAnimator.SetTrigger("Wake");
                this.SetState(State.Attack);
                return;
            }
            
        }

        // 공격 상태
        else if (mCurrState == State.Attack)
        {
            

            // 공격 영역 안에 있는 경우 공격 한다.
            if (IsInAttackRange())
            {
                if (mTarget)
                {
                    mAnimator.SetTrigger("Jump");
                    // 주변 에있으면 데미지인데... 다른 몬스터는..?
                    mTarget.OnDamage(this.mDamage);

                    this.SetState(State.Die);
                }
               
            }
            // 공격 역역이 아닌 경우 추적 한다.
            else
            {
                mAnimator.SetTrigger("Move");
                Vector3 nextPosition = Vector3.MoveTowards(transform.position, mTarget.transform.position, mSpeed * Time.deltaTime);
                if (!IsMovablePosition(nextPosition))
                {
                    mWanderPosition = GenerateRandomAroundPosition(this.mWanderDistance);
                    this.SetState(State.Attack);
                    return;
                }

                transform.position = nextPosition;
            }
        }
        // 사망 상태 

        else if (mCurrState == State.Die)
        {
            // die 연출 없는데 투명하게 되면서 사라지는거 넣자.

            // 사망 로직 처리 후에 반드시 State.None 으로 보내서 더이상 업데이트문을 타지 않도록 상태 변경.
            this.SetState(State.None);

            // 잡은 몬스터 관리 주최에다가 add 필요.
        }
    }
}
